# contextual-intelligence

./: .gitignore  PROJECT_RULES.md  README.md  SECURITY.md  pyproject.toml
.agents/: GEMINI.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/qa/: manual-regression.md
docs/qa/results/: v0.1.0-dev.1.md
scripts/qa/: clipboard_locker.py
src/contextual_intelligence/: __init__.py  cli.py  clipboard.py  config.py  hotkey.py  instance.py  llm.py  log.py  models.py  paste_presets.py
src/contextual_intelligence/capture/: __init__.py  clipboard_fallback.py  uia.py
src/contextual_intelligence/ui/: __init__.py  palette.py  paste_worker.py  popup.py  positioning.py  tray.py  worker.py
tests/: conftest.py  test_cli.py  test_clipboard.py  test_clipboard_fallback.py  test_config.py  test_fallback_lifecycle.py  test_hotkey.py  test_instance.py  test_lifecycle.py  test_models.py  test_orchestrator.py  test_packaging.py  test_palette.py  test_paste_worker.py  test_positioning.py  test_prompt.py  test_tray.py  test_ui.py  test_uia.py
